src/components/division/section/Section.module.css
.container:not(.hero) {
    min-height: 100dvh;
    width: 80%;
    margin-inline: auto;

    padding-block: 5rem;

    z-index: 0;

    position: relative;
}

.container:not(.hero, .stack) {
    display: flex;
    justify-content: center;
    align-items: center;

    gap: 2rem;
}

.container > p {
    width: 100%;
}

.vertical {
    flex-direction: column;
}

.stack {
    display: grid;
    grid-template-areas: "stack";
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
}

.stack > * {
    grid-area: stack;
}

.container:not(.vertical, .stack) > div {
    display: flex;
    flex-direction: column;
    justify-content: center;

    gap: 1.5rem;

    min-height: 50rem;
    max-width: 80ch;

    flex: 1;
}

.container > div > div:has(canvas) {
    height: 80dvh;
    width: 60dvw;
}

@media (max-width: 1366px) {
    .container:has(canvas) {
        display: grid !important;
        grid-template-areas: "stack";

        & > * {
            grid-area: stack;
        }

        & > :not(div:has(canvas)) {
            width: 80%;
            margin-inline: auto;
        }
        
        & div:has(canvas) {
            transition: none !important;
            width: 100%;
        }
    }

    .container > div > div:has(canvas) {
        width: 100dvw;
    }
}

.container canvas {
    width: 100%;
    height: 100%;
}

.container.hero {
    height: calc(100dvh - 6.5rem);

    --border: 2px solid var(--color-text);

    border-top: var(--border);
    border-bottom: var(--border);

    font-size: 1.5rem;
}

.container.projects {
    height: 75dvh;
    
    border-top: var(--border);
    border-bottom: var(--border);

    margin-inline: 0;

    width: 100%;
    
    font-size: 1.5rem;
}

@media screen and (max-width: 768px) {
    .container {
        flex-direction: column;
    }
}

